[package]
edition = "2021"
authors = ["Zeyla Hellyer <zey@zey.moe>"]
description = "Serenity ecosystem oauth support for the Discord API."
documentation = "https://docs.rs/serenity-oauth"
homepage = "https://github.com/serenity-rs/oauth"
keywords = ["discord", "oauth", "serenity"]
license = "ISC"
name = "serenity-oauth"
readme = "README.md"
repository = "https://github.com/dbotsfun/oauth.git"
version = "0.1.0"

[dependencies]
reqwest = { version = "=0.12.7", features = ["json", "blocking"] }
percent-encoding = "=2.3.1"
serde = "=1.0.210"
serde_derive = "=1.0.210"
serde_urlencoded = "0.7"
serde_json = "=1.0.128"
serenity = { version = "=0.12.2", features = ["model"] }
